Additional client-requested changes

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -4,10 +4,10 @@
 Typically, if a color is used more than once or twice,
 it should be added here as a variable. Changing the value
 of these variables will affect the colors sitewide. */
-$futura-regular: "futura-pt", verdana, sans-serif;
-$futura-condensed: "futura-pt-condensed", verdana, sans-serif;
-$proxima-nova: "proxima-nova", verdana, sans-serif;
-$arial: Arial, verdana, sans-serif;
+$futura-regular: "futura-pt", Arial, sans-serif;
+$futura-condensed: "futura-pt-condensed", Arial, sans-serif;
+$proxima-nova: "proxima-nova", Arial, sans-serif;
+$arial: Arial, sans-serif;
 
 $font-stack-body: $proxima-nova;
 $font-stack-body-new: $arial;
