--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -152,7 +152,7 @@
     }
   }
   .tagline {
-    font-family: $futura-regular;
+    font-family: $font-stack-heading;
     text-transform: uppercase;
     font-size: 24px;
     line-height: 24px;
