--- a/app/assets/stylesheets/layout_old/admission/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/admission/primary-content.scss
@@ -27,7 +27,7 @@
 	  }
 	  h3 {
 	    clear: both;
-	    color: #a50034;
+	    color: $cu-red;
 	    font-family: "Open Sans";
 	    font-weight: normal;
 	    font-size: 16px;
