--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -776,7 +776,7 @@ a.cu_nav_button {
 
         input.persist {
             border-color: #D8D6D0;
-            color: #a50034;
+            color: $chapman-red;
             @include vendorize(box-shadow, none);
         }
 
@@ -791,7 +791,7 @@ a.cu_nav_button {
             speak: none;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
-            color: #a50034;
+            color: $chapman-red;
         }
 
     }
