Updates Footer Social Icons to SVG and replaces google-plus with snapchat.

--- a/app/assets/stylesheets/layout_old/footer.scss
+++ b/app/assets/stylesheets/layout_old/footer.scss
@@ -185,8 +185,8 @@
           a {
             vertical-align: middle;
             font-size: 24px;
-            line-height: 42px;
-            color: white;
+            line-height: 44px;
+            fill: #ffffff;
             //screen-readers only will see A text for social buttons
             .sr-only {
               position: absolute;
