Replaced Verdana with Arial in font family definitions

--- a/subprojects/campus-map/source/static/app/sass/helpers/_theme-variables.scss
+++ b/subprojects/campus-map/source/static/app/sass/helpers/_theme-variables.scss
@@ -42,7 +42,7 @@ $light-blue: $mystic;
 $icomoon: "icomoon";
 $proxima-nova: $font-stack-heading;
 
-// $sans-serif: "proxima-nova", arial, verdana, sans-serif;
+// $sans-serif: "proxima-nova", arial, sans-serif;
 
 // $primary-font: $sans-serif;
 
