--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -40,8 +40,8 @@ $cu-viewport-xl: 1200px;
 }
 
 @mixin font-stack-for-headings() {
-    font-family: "futura-pt", Arial, Verdana, "Sans Serif";
-    font-family: "futura-pt", Arial, Verdana, "Sans Serif";
+    font-family: "futura-pt", Arial, "Sans Serif";
+    font-family: "futura-pt", Arial, "Sans Serif";
 }
 
 @mixin wordpress-admin-bar-spacing() {
@@ -337,14 +337,14 @@ a.cu_nav_button {
         transition: background-color 0.5s ease-out;
         position: relative;
         line-height: 16px;
-        font-family: "proxima-nova-soft", "proxima-nova", "futura-pt", Arial, Verdana, "Sans Serif";
+        font-family: "proxima-nova-soft", "proxima-nova", "futura-pt", Arial, "Sans Serif";
         box-shadow: none;
         @include vendorize(appearance, none);
 
         &::-webkit-input-placeholder {
             font-size: 13px;
             color: $black;
-            font-family: "proxima-nova-soft", "proxima-nova", "futura-pt", Arial, Verdana, "Sans Serif";
+            font-family: "proxima-nova-soft", "proxima-nova", "futura-pt", Arial, "Sans Serif";
         }
 
         &:focus,
@@ -736,7 +736,7 @@ a.cu_nav_button {
         #cu_password {
             width:100%;
             padding:7px;
-            font-family:"RooneySans","proxima-nova-soft", "futura-pt", Arial, Verdana, "Sans Serif";
+            font-family:"RooneySans","proxima-nova-soft", "futura-pt", Arial, "Sans Serif";
             font-size:12px;
             border:1px solid #D8D6D0;
             border-radius: 2px;
