--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -29,7 +29,7 @@ html.omni-nav-v2 {
   position: fixed;
   width: 100%;
   top: 0;
-  font-family: "futura-pt", verdana, sans-serif;
+  font-family: "futura-pt", Arial, sans-serif;
 
   // Needs to be high enough to put off-canvas-nav on top of anything else on page.
   z-index: 1000;
@@ -340,9 +340,9 @@ html.omni-nav-v2 {
       .search-results-container { line-height: normal; }
       input.gsc-input, input.gsc-search-button { border: 1px solid #545454;}
       input.gsc-input { border-right: none; }
-      
-      input.gsc-search-button { 
-        border-left: none; 
+
+      input.gsc-search-button {
+        border-left: none;
         float: right; //new to fix search box
       }
 
@@ -450,7 +450,7 @@ html.omni-nav-v2 {
               // Text-related CSS
               line-height: normal;
               font-size: 10px;
-              font-family: "futura-pt", verdana, sans-serif;
+              font-family: "futura-pt", Arial, sans-serif;
               font-weight: 800;
               text-transform: uppercase;
             }
