--- a/subprojects/degrees-and-programs/source/static/app/sass/helpers/_theme-variables.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/helpers/_theme-variables.scss
@@ -1,8 +1,8 @@
 // Use this file to store common values like
 // font size, z index, etc.
 
-$proxima-nova: "proxima-nova", verdana, sans-serif;
-$futura: "futura-pt", verdana, sans-serif;
+$proxima-nova: "proxima-nova", Arial, sans-serif;
+$futura: "futura-pt", Arial, sans-serif;
 
 // Foundation overrides
 @import 'overrides/_foundation';
