--- a/subprojects/degrees-and-programs/source/static/app/sass/modules/_dap-feature.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/modules/_dap-feature.scss
@@ -17,7 +17,7 @@ $dap-feature-background-image-width: rem-calc(1396);
 	background-size: auto;
 	background-position: top center;
 	background-repeat: no-repeat;
-	font-family: Arial, Verdana, sans-serif;
+	font-family: Arial, sans-serif;
 
 	@include breakpoint($dap-feature-background-image-width) {
 		background-size: 100% auto;
