--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -298,7 +298,7 @@
 }
 
 @mixin condensed-heading {
-	font-family: $font-stack-heading-new;
+	font-family: $futura-condensed;
 	font-weight: 800;
 	text-transform: uppercase;
 }
