--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -9,10 +9,8 @@ $futura-condensed: "futura-pt-condensed", Arial, sans-serif;
 $proxima-nova: "proxima-nova", Arial, sans-serif;
 $arial: Arial, sans-serif;
 
-$font-stack-body: $proxima-nova;
-$font-stack-body-new: $arial;
+$font-stack-body: $arial;
 $font-stack-heading: $futura-regular;
-$font-stack-heading-new: $futura-condensed;
 
 $cu-red: #a50034;
 $cu-red-rgb-transparent: rgba($cu-red, 0.95);
