--- a/app/views/layouts/1_column.html.erb
+++ b/app/views/layouts/1_column.html.erb
@@ -9,7 +9,7 @@
 <!--[if gt IE 8]><!-->
 
 <body>
-    <div id="theme" class="<%= yield(:theme) %> new-font-theme">
+    <div id="theme" class="<%= yield(:theme) %>">
         <span class="hidden"><a href="#main" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a></span>
 
         <div id="fb-root"></div>
