--- a/app/views/layouts/omninav_2col.html.erb
+++ b/app/views/layouts/omninav_2col.html.erb
@@ -22,7 +22,7 @@
 
 
 <body>
-  <div id="theme" class="<%= params[:theme] %> new-font-theme">
+  <div id="theme" class="<%= params[:theme] %>">
     <span class="hidden">
       <a href="#main" title="Skip navigation and jump directly to the main content of this page">
         Jump to the main content of this page
