--- a/app/views/layouts/omninav_home.html.erb
+++ b/app/views/layouts/omninav_home.html.erb
@@ -23,7 +23,7 @@
 
 <body>
 
-  <div id="theme" class="new-font-theme">
+  <div id="theme">
     <span class="hidden">
       <a href="#main" title="Skip navigation and jump directly to the main content of this page">
         Jump to the main content of this page
