Replaced all instances of Proxima Nova in .scss files with Arial, rebuild of Degrees and Programs
I did not replace the instances in the minified CSS files in the
project. I’m unsure of the build process for these, but once built,
they should no longer have instances of Proxima Nova either.

--- a/subprojects/campus-map/source/static/app/sass/modules/_map-nav.scss
+++ b/subprojects/campus-map/source/static/app/sass/modules/_map-nav.scss
@@ -51,7 +51,7 @@
 	// Virtual Tour "Go To Map" call-to-action
 	.virtualTour-goToMapCTA {
 		background-color: $dark-red;
-		font-family: $proxima-nova;
+		font-family: $font-stack-body;
 		font-size: 13px;
 		font-weight: 600;
 		color: $white;
