--- a/subprojects/degrees-and-programs/source/static/app/sass/helpers/overrides/_foundation.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/helpers/overrides/_foundation.scss
@@ -60,7 +60,7 @@ $global-width: rem-calc(1176);
 // $white: #fefefe;
 // $body-background: $white;
 // $body-font-color: $black;
-$body-font-family: $proxima-nova;
+$body-font-family: Arial, sans-serif;
 // $body-antialiased: true;
 // $text-direction: ltr;
 // $global-margin: 1rem;
@@ -529,5 +529,3 @@ $reveal-max-width: $global-width;
 // $topbar-background: #eee;
 // $topbar-link-color: #fff;
 // $topbar-input-width: 200px;
-
-
