--- a/subprojects/degrees-and-programs/source/static/app/sass/helpers/_theme-variables.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/helpers/_theme-variables.scss
@@ -1,7 +1,7 @@
 // Use this file to store common values like
 // font size, z index, etc.
 
-$proxima-nova: "proxima-nova", Arial, sans-serif;
+$arial: Arial, sans-serif;
 $futura: "futura-pt", Arial, sans-serif;
 
 // Foundation overrides
