--- a/app/views/_cascade/blocks/html/_law_footer.html
+++ b/app/views/_cascade/blocks/html/_law_footer.html
@@ -76,7 +76,7 @@
             <li>
               <a href="https://www.facebook.com/ChapmanUniversity" target="_blank">
                 <span class="sr-only">Facebook</span>
-                <svg class="icon icon-facebook" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
                   <path d="M19 6h5v-6h-5c-3.9 0-7 3.1-7 7v3h-4v6h4v16h6v-16h5l1-6h-6v-3c0-0.5 0.5-1 1-1z"></path>
                 </svg>
               </a>
@@ -84,7 +84,7 @@
             <li>
               <a href="https://twitter.com/#!/chapmanu" target="_blank">
                 <span class="sr-only">Twitter</span>
-                <svg class="icon icon-twitter" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
                   <path d="M32 7.1c-1.2 0.5-2.4 0.9-3.8 1 1.4-0.8 2.4-2.1 2.9-3.6-1.3 0.8-2.7 1.3-4.2 1.6-1.2-1.3-2.9-2.1-4.8-2.1-3.6 0-6.6 2.9-6.6 6.6 0 0.5 0.1 1 0.2 1.5-5.5-0.3-10.3-2.9-13.5-6.9-0.6 1-0.9 2.1-0.9 3.3 0 2.3 1.2 4.3 2.9 5.5-1.1 0-2.1-0.3-3-0.8 0 0 0 0.1 0 0.1 0 3.2 2.3 5.8 5.3 6.4-0.5 0.2-1.1 0.2-1.7 0.2-0.4 0-0.8 0-1.2-0.1 0.8 2.6 3.3 4.5 6.1 4.6-2.2 1.8-5.1 2.8-8.2 2.8-0.5 0-1 0-1.6-0.1 2.9 1.9 6.4 3 10.1 3 12.1 0 18.7-10 18.7-18.7 0-0.3 0-0.6 0-0.8 1.3-0.9 2.4-2.1 3.3-3.4z"></path>
                 </svg>
               </a>
@@ -92,7 +92,7 @@
             <li>
               <a href="https://pinterest.com/chapmanu/" target="_blank">
                 <span class="sr-only">Pinterest</span>
-                <svg class="icon icon-pinterest" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
                   <path d="M16 0c-8.8 0-16 7.2-16 16s7.2 16 16 16 16-7.2 16-16-7.2-16-16-16zM16 29.9c-1.4 0-2.8-0.2-4.1-0.6 0.6-0.9 1.4-2.4 1.7-3.6 0.2-0.6 0.9-3.3 0.9-3.3 0.5 0.9 1.8 1.6 3.2 1.6 4.2 0 7.2-3.8 7.2-8.6 0-4.6-3.7-8-8.5-8-6 0-9.2 4-9.2 8.4 0 2 1.1 4.6 2.8 5.4 0.3 0.1 0.4 0.1 0.5-0.2 0-0.2 0.3-1.1 0.4-1.6 0-0.1 0-0.3-0.1-0.4-0.6-0.7-1-2-1-3.2 0-3.1 2.3-6 6.3-6 3.4 0 5.8 2.3 5.8 5.6 0 3.8-1.9 6.4-4.4 6.4-1.4 0-2.4-1.1-2-2.5 0.4-1.6 1.2-3.4 1.2-4.6 0-1.1-0.6-1.9-1.8-1.9-1.4 0-2.5 1.4-2.5 3.4 0 1.2 0.4 2.1 0.4 2.1s-1.4 5.8-1.6 6.9c-0.3 1.2-0.2 2.9 0 4-5.2-2-8.8-7-8.8-12.9 0-7.7 6.2-13.9 13.9-13.9s13.9 6.2 13.9 13.9c0 7.7-6.2 13.9-13.9 13.9z"></path>
                 </svg>
               </a>
@@ -100,7 +100,7 @@
             <li>
               <a href="https://www.instagram.com/chapmanu" target="_blank">
                 <span class="sr-only">Instagram</span>
-                <svg class="icon icon-instagram" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
                   <path d="M16 2.9c4.3 0 4.8 0 6.5 0.1 1.6 0.1 2.4 0.3 3 0.6 0.7 0.3 1.3 0.6 1.8 1.2 0.6 0.6 0.9 1.1 1.2 1.8 0.2 0.6 0.5 1.4 0.6 3 0.1 1.7 0.1 2.2 0.1 6.5s0 4.8-0.1 6.5c-0.1 1.6-0.3 2.4-0.5 3-0.3 0.7-0.6 1.3-1.2 1.8-0.6 0.6-1.1 0.9-1.8 1.2-0.6 0.2-1.4 0.5-3 0.6-1.7 0.1-2.2 0.1-6.5 0.1s-4.8 0-6.5-0.1c-1.6-0.1-2.4-0.3-3-0.5-0.7-0.3-1.3-0.6-1.8-1.2-0.6-0.6-0.9-1.1-1.2-1.8-0.2-0.6-0.5-1.4-0.5-3-0.1-1.7-0.1-2.2-0.1-6.5s0-4.8 0.1-6.5c0.1-1.6 0.3-2.4 0.6-3 0.3-0.7 0.6-1.3 1.2-1.8 0.6-0.6 1.1-0.9 1.8-1.2 0.6-0.2 1.4-0.5 3-0.5 1.7-0.1 2.2-0.1 6.5-0.1zM16 0c-4.3 0-4.9 0-6.6 0.1-1.7 0.1-2.9 0.4-3.9 0.7-1.1 0.4-1.9 1-2.8 1.9-0.9 0.9-1.4 1.8-1.8 2.8-0.4 1-0.7 2.2-0.7 3.9-0.1 1.7-0.1 2.3-0.1 6.6s0 4.9 0.1 6.6c0.1 1.7 0.4 2.9 0.7 3.9 0.4 1.1 1 2 1.9 2.8 0.9 0.9 1.8 1.4 2.8 1.8 1 0.4 2.2 0.7 3.9 0.7 1.7 0.1 2.3 0.1 6.6 0.1s4.9 0 6.6-0.1c1.7-0.1 2.9-0.3 3.9-0.7 1.1-0.4 1.9-1 2.8-1.8s1.4-1.8 1.8-2.8c0.4-1 0.7-2.2 0.7-3.9 0.1-1.7 0.1-2.2 0.1-6.6s0-4.9-0.1-6.6c-0.1-1.7-0.3-2.9-0.7-3.9-0.4-1.1-0.9-2-1.8-2.8-0.9-0.9-1.8-1.4-2.8-1.8-1-0.4-2.2-0.7-3.9-0.7-1.7-0.1-2.3-0.1-6.6-0.1v0z"></path><path d="M16 7.8c-4.5 0-8.2 3.7-8.2 8.2s3.7 8.2 8.2 8.2 8.2-3.7 8.2-8.2c0-4.5-3.7-8.2-8.2-8.2zM16 21.3c-2.9 0-5.3-2.4-5.3-5.3s2.4-5.3 5.3-5.3c2.9 0 5.3 2.4 5.3 5.3s-2.4 5.3-5.3 5.3z"></path><path d="M26.5 7.5c0 1.1-0.9 1.9-1.9 1.9s-1.9-0.9-1.9-1.9c0-1.1 0.9-1.9 1.9-1.9s1.9 0.9 1.9 1.9z"></path>
                 </svg>
               </a>
@@ -108,7 +108,7 @@
             <li>
               <a href="https://www.youtube.com/user/ChapmanUniversity" target="_blank">
                 <span class="sr-only">youTube</span>
-                <svg class="icon icon-youtube" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
                   <path d="M31.7 9.6c0 0-0.3-2.2-1.3-3.2-1.2-1.3-2.6-1.3-3.2-1.4-4.5-0.3-11.2-0.3-11.2-0.3h0c0 0-6.7 0-11.2 0.3-0.6 0.1-2 0.1-3.2 1.4-1 1-1.3 3.2-1.3 3.2s-0.3 2.6-0.3 5.2v2.4c0 2.6 0.3 5.2 0.3 5.2s0.3 2.2 1.3 3.2c1.2 1.3 2.8 1.2 3.5 1.4 2.6 0.2 10.9 0.3 10.9 0.3s6.7 0 11.2-0.3c0.6-0.1 2-0.1 3.2-1.4 1-1 1.3-3.2 1.3-3.2s0.3-2.6 0.3-5.2v-2.4c0-2.6-0.3-5.2-0.3-5.2zM12.7 20.2v-9l8.6 4.5-8.6 4.5z"></path>
                 </svg>
               </a>
@@ -116,7 +116,7 @@
             <li>
               <a href="https://www.linkedin.com/company/10701?trk=tyah" target="_blank">
                 <span class="sr-only">LinkedIn</span>
-                <svg class="icon icon-linkedin2" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
                   <path d="M12 12h5.5v2.8h0.1c0.8-1.4 2.7-2.8 5.5-2.8 5.8 0 6.9 3.6 6.9 8.4v9.6h-5.8v-8.5c0-2 0-4.7-3-4.7-3 0-3.5 2.2-3.5 4.5v8.7h-5.8v-18z"></path><path d="M2 12h6v18h-6v-18z"></path><path d="M8 7c0 1.7-1.3 3-3 3s-3-1.3-3-3c0-1.7 1.3-3 3-3s3 1.3 3 3z"></path>
                 </svg>
               </a>
@@ -124,7 +124,7 @@
             <li>
               <a href="https://www.snapchat.com/add/chapmanu" target="_blank">
                 <span class="sr-only">Snapchat</span>
-                <svg class="icon icon-snapchat" height="24" viewBox="0 0 32 32" width="24" xlink="http://www.w3.org/2000/svg">
+                <svg height="24" viewBox="0 0 32 32" width="24" xlink="http://www.w3.org/2000/svg">
                   <path d="M16.5,1.4c3.4,0,6.3,1.9,7.7,4.9c0.5,0.9,0.5,2.4,0.5,3.4c0,1.2-0.1,2.4-0.2,3.6c0.2,0.1,0.4,0.1,0.5,0.1c0.6,0,1.3-0.5,1.9-0.5c0.6,0,1.6,0.5,1.6,1.2c0,1.8-3.8,1.5-3.8,3.1c0,0.3,0.1,0.5,0.2,0.8c0.9,2,2.6,3.9,4.6,4.7c0.5,0.2,1,0.4,1.5,0.5c0.4,0.1,0.5,0.4,0.5,0.6c0,1.3-3.3,1.8-4.2,1.9c-0.4,0.5-0.1,2-1.1,2c-0.8,0-1.6-0.3-2.4-0.3c-0.4,0-0.8,0-1.2,0.1c-2.2,0.5-3,3-6.7,3c-3.6,0-4.5-2.5-6.7-2.8c-0.4-0.1-0.8-0.1-1.2-0.1c-0.8,0-1.6,0.3-2.4,0.3c-1.1,0-0.7-1.4-1.1-2c-0.9-0.1-4.2-0.6-4.2-1.9c0-0.4,0.2-0.5,0.5-0.6c0.5-0.1,1-0.2,1.6-0.5c2-0.8,3.8-2.7,4.6-4.7c0.1-0.3,0.2-0.5,0.2-0.8c0-1.6-3.8-1.3-3.8-3.1c0-0.7,0.9-1.2,1.5-1.2c0.5,0,1.2,0.5,1.9,0.5c0.2,0,0.5,0,0.6-0.1C7.7,12.2,7.6,11,7.6,9.8c0-1,0.1-2.5,0.5-3.4C9.8,2.7,12.6,1.4,16.5,1.4z"></path>
                 </svg>
               </a>
@@ -132,7 +132,7 @@
             <li>
               <a href="https://itunes.apple.com/us/institution/chapman-university/id430678922" target="_blank">
                 <span class="sr-only">iTunes</span>
-                <svg class="icon icon-itunes" height="24" viewBox="0 0 32 32" width="24" xlink="http://www.w3.org/2000/svg">
+                <svg height="24" viewBox="0 0 32 32" width="24" xlink="http://www.w3.org/2000/svg">
                   <path d="M30,0h2v23c0,2.8-3.1,5-7,5s-7-2.2-7-5s3.1-5,7-5c2,0,3.7,0.6,5,1.5V8l-16,3.6V27c0,2.8-3.1,5-7,5s-7-2.2-7-5s3.1-5,7-5c2,0,3.7,0.6,5,1.5V4L30,0z"></path>
                 </svg>
               </a>
