Renamed tagline style class; Added Home Page Hero Panel Formats

--- a/app/assets/stylesheets/widgets/home_page/hero_panel.scss
+++ b/app/assets/stylesheets/widgets/home_page/hero_panel.scss
@@ -166,7 +166,7 @@
       margin: 0.875em 0 0;
     }
   }
-  .tagline_line-2 {
+  .tagline-line-2 {
     display: block;
   }  
   .heading, .subheading, .tagline, .excerpt {
@@ -240,7 +240,7 @@
     .excerpt {
       display: block;
     }
-    .tagline_line-2 {
+    .tagline-line-2 {
       display: inline;
     }    
     .heading {
