--- a/app/views/_cascade/blocks/html/_law_footer.html
+++ b/app/views/_cascade/blocks/html/_law_footer.html
@@ -115,8 +115,8 @@
             </li>
             <li>
               <a href="https://www.linkedin.com/company/10701?trk=tyah" target="_blank">
-                <span class="sr-only">LinkedIn</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
+                  <title>LinkedIn</title>
                   <path d="M12 12h5.5v2.8h0.1c0.8-1.4 2.7-2.8 5.5-2.8 5.8 0 6.9 3.6 6.9 8.4v9.6h-5.8v-8.5c0-2 0-4.7-3-4.7-3 0-3.5 2.2-3.5 4.5v8.7h-5.8v-18z"></path><path d="M2 12h6v18h-6v-18z"></path><path d="M8 7c0 1.7-1.3 3-3 3s-3-1.3-3-3c0-1.7 1.3-3 3-3s3 1.3 3 3z"></path>
                 </svg>
               </a>
