Added variable for emphasis heading font

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -298,7 +298,7 @@
 }
 
 @mixin condensed-heading {
-	font-family: $futura-condensed;
+	font-family: $font-stack-heading-emphasis;
 	font-weight: 800;
 	text-transform: uppercase;
 }
