--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -10,6 +10,7 @@ $arial: Arial, sans-serif;
 
 $font-stack-body: $arial;
 $font-stack-heading: $futura-regular;
+$font-stack-heading-emphasis: $futura-condensed;
 
 $cu-red: #a50034;
 $cu-red-rgb-transparent: rgba($cu-red, 0.95);
