Updated views to remove WAVE errors

--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -23,6 +23,7 @@
       <div id="main-logo" class="toggle-logo">
         <a class="default off-logo" href="/" title="Chapman University Website Home Page">
           <!-- logo set as background image by class -->
+          Chapman University
         </a>
         <span class="close js-close-off-canvas-nav">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
