--- a/app/views/widgets/home_page/_hero_panel.html
+++ b/app/views/widgets/home_page/_hero_panel.html
@@ -38,7 +38,7 @@
 
     <div id="mastheadBackground">
       <video id="mastheadVideo" muted="muted" loop="loop" autoplay="autoplay" style="display:none;"></video>
-      <img id="mastheadImage" src="http://www.chapman.edu/_files/img/hero-panels/fallback-images/hilbert-art.jpg" />
+      <img id="mastheadImage" src="http://www.chapman.edu/_files/img/hero-panels/fallback-images/hilbert-art.jpg" alt="California Scene Painting" />
     </div>
   </section>
 </div>
