Updates OURCA to CUE in global and off-canvas navs.

--- a/app/views/omni_nav_v2/_global_nav.html.erb
+++ b/app/views/omni_nav_v2/_global_nav.html.erb
@@ -69,7 +69,7 @@
             <li><a class="icon icon-medal" href="research/sponsored-projects-services/index.aspx">Sponsored Projects Services</a></li>
             <li><a class="icon icon-clipboard5" href="research/integrity/index.aspx">Research Integrity</a></li>
             <li><a class="icon icon-library4" href="research/institutes-and-centers/index.aspx">Institutes and Centers</a></li>
-            <li><a class="icon icon-lamp8" href="research/office-undergraduate-research-creative-activity/index.aspx">Undergraduate Research and Creative Activity</a></li>
+            <li><a class="icon icon-lamp8" href="research/office-undergraduate-research-creative-activity/index.aspx">Center for Undergraduate Excellence</a></li>
             <li><a class="icon icon-microscope" href="research/graduate-research/index.aspx">Graduate Research Support</a></li>
           </ul>
         </div>
