--- a/app/assets/stylesheets/widgets/primary_column/wysiwyg.scss
+++ b/app/assets/stylesheets/widgets/primary_column/wysiwyg.scss
@@ -6,10 +6,10 @@
   }
 
   #map_frame {
-    min-height: 59vh;
+    min-height: 79vh;
 
-    @include bp(wildcard-max, 767px) {
-      min-height: 79vh;
+    @include media($medium-screen) {
+      min-height: 59vh;
     }
   }
 }
