--- a/app/views/widgets/home_page/_emergency_alert.html
+++ b/app/views/widgets/home_page/_emergency_alert.html
@@ -1,14 +1,16 @@
 <div class="emergency-alert">
-  <svg id="icon-close" version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
+  <svg id="icon-close-alert" version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
     <title>Close</title>
     <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
   </svg>
-  <svg id="icon-warning" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
-    <title>warning</title>
-    <path d="M16 2.899l13.409 26.726h-26.819l13.409-26.726zM16 0c-0.69 0-1.379 0.465-1.903 1.395l-13.659 27.222c-1.046 1.86-0.156 3.383 1.978 3.383h27.166c2.134 0 3.025-1.522 1.978-3.383h0l-13.659-27.222c-0.523-0.93-1.213-1.395-1.903-1.395v0z"></path>
-    <path d="M18 26c0 1.105-0.895 2-2 2s-2-0.895-2-2c0-1.105 0.895-2 2-2s2 0.895 2 2z"></path>
-    <path d="M16 22c-1.105 0-2-0.895-2-2v-6c0-1.105 0.895-2 2-2s2 0.895 2 2v6c0 1.105-0.895 2-2 2z"></path>
-  </svg>
-  <p class="alert-title">Panther Alert</p>
-  <p class="alert-message">Due to severe air quality conditions caused by the wildfires, Chapman University will be cancelling all classes and will be closing the campus for the day. For details, visit: <a href="www.chapman.edu/alerts">www.chapman.edu/alerts</a></p>
+  <div class="alert-text">
+    <svg id="icon-warning" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+      <title>warning</title>
+      <path d="M16 2.899l13.409 26.726h-26.819l13.409-26.726zM16 0c-0.69 0-1.379 0.465-1.903 1.395l-13.659 27.222c-1.046 1.86-0.156 3.383 1.978 3.383h27.166c2.134 0 3.025-1.522 1.978-3.383h0l-13.659-27.222c-0.523-0.93-1.213-1.395-1.903-1.395v0z"></path>
+      <path d="M18 26c0 1.105-0.895 2-2 2s-2-0.895-2-2c0-1.105 0.895-2 2-2s2 0.895 2 2z"></path>
+      <path d="M16 22c-1.105 0-2-0.895-2-2v-6c0-1.105 0.895-2 2-2s2 0.895 2 2v6c0 1.105-0.895 2-2 2z"></path>
+    </svg>
+    <p class="alert-heading">Panther Alert</p>
+    <p class="alert-message">Due to severe air quality conditions caused by the wildfires, Chapman University will be cancelling all classes and will be closing the campus for the day. For details, visit: <a href="www.chapman.edu/alerts">www.chapman.edu/alerts</a></p>
+  </div>
 </div>
