New emergency alert styles (desktop)
Also accounting for other potential fields from the Rave RSS feed

--- a/app/views/widgets/home_page/_emergency_alert.html
+++ b/app/views/widgets/home_page/_emergency_alert.html
@@ -11,6 +11,8 @@
       <path d="M16 22c-1.105 0-2-0.895-2-2v-6c0-1.105 0.895-2 2-2s2 0.895 2 2v6c0 1.105-0.895 2-2 2z"></path>
     </svg>
     <p class="alert-heading">Panther Alert</p>
-    <p class="alert-message">Due to severe air quality conditions caused by the wildfires, Chapman University will be cancelling all classes and will be closing the campus for the day. For details, visit: <a href="www.chapman.edu/alerts">www.chapman.edu/alerts</a></p>
+    <p class="alert-title"></p>
+    <p class="alert-message">Due to severe air quality conditions caused by the wildfires, Chapman University will be cancelling all classes and will be closing the campus for the day.</p>
+    <p class="alert-link">For details, visit: <a href="www.chapman.edu/alerts">www.chapman.edu/alerts</a></p>
   </div>
 </div>
