--- a/app/assets/stylesheets/widgets/home_page/emergency_alert.scss
+++ b/app/assets/stylesheets/widgets/home_page/emergency_alert.scss
@@ -1,3 +1,7 @@
+// Global value for large-screen is currently 1024px
+// Overwrite just in this file
+$large-screen: 1130px;
+
 .emergency-alert {
   background-color: $cu-red;
   color: $white;
@@ -6,6 +10,10 @@
   .alert-text {
     @include media($medium-screen) {
       padding: 0 60px;
+    }
+
+    @include media($large-screen) {
+      padding: 0 250px;
     }
 
     p {
@@ -28,7 +36,9 @@
         }
       }
 
-      &.alert-message {
+      &.alert-link, &.alert-message {
+        display: inline;
+
         a {
           color: $white;
           border-bottom: 2px solid rgba(255,255,255,0.5);
