--- a/app/views/widgets/home_page/_emergency_alert.html
+++ b/app/views/widgets/home_page/_emergency_alert.html
@@ -1,8 +1,10 @@
 <div class="emergency-alert">
-  <svg id="icon-close-alert" version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
-    <title>Close</title>
-    <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
-  </svg>
+  <span class="close-alert-trigger">
+    <svg class="icon-close" version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
+      <title>Close</title>
+      <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
+    </svg>
+  </span>
   <div class="alert-text">
     <svg id="icon-warning" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
       <title>warning</title>
@@ -13,6 +15,6 @@
     <p class="alert-heading">Panther Alert</p>
     <p class="alert-title"></p>
     <p class="alert-message">Due to severe air quality conditions caused by the wildfires, Chapman University will be cancelling all classes and will be closing the campus for the day.</p>
-    <p class="alert-link">For details, visit: <a href="www.chapman.edu/alerts">www.chapman.edu/alerts</a></p>
+    <p class="alert-link">For details, visit: <a href="www.chapman.edu/alerts">www.chapman.edu/alerts</a>.</p>
   </div>
 </div>
