Border on emergency alert

--- a/app/assets/stylesheets/widgets/home_page/emergency_alert.scss
+++ b/app/assets/stylesheets/widgets/home_page/emergency_alert.scss
@@ -6,6 +6,7 @@ $large-screen: 1130px;
   background-color: $cu-red;
   color: $white;
   padding: 25px;
+  border-bottom: 1px solid $cu-light-grey;
 
   .close-alert-trigger {
     cursor: pointer;
