Emergency alert javascript should only load on homepage

--- a/app/assets/stylesheets/widgets/home_page/emergency_alert.scss
+++ b/app/assets/stylesheets/widgets/home_page/emergency_alert.scss
@@ -65,6 +65,7 @@ $large-screen: 1130px;
       }
 
       &.alert-message {
+        padding-top: 10px;
         padding-bottom: 20px;
         border-bottom: 1px solid white;
       }
